# conventional-commits

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  mkver.conf  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/actions/check_semantic_version/: Dockerfile  action.yaml
.github/workflows/: build-docker-image.yml  python-ci.yml  release.yml  update-pull-request.yml
check-semantic-version/: Dockerfile  action.yaml  entrypoint.sh
check_semantic_version/: Dockerfile  action.yaml
conventional-commits/: setup.cfg
conventional-commits/conventional_commits/: checker.py  cli.py
conventional-commits/tests/: test_check_commit_message.py  test_cli.py  test_main.py
conventional-commits/tests/fixtures/: invalid_commit_message  valid_commit_message
conventional_commits/: __init__.py  check_commit_message.py  check_semantic_version.py  cli.py  compile_release_notes.py
examples/release_notes_compiler/: workflow.yml
examples/semantic_version_checker/: mkver-for-beta-versions.conf  mkver.conf  workflow.yml
generate-release-notes/: Dockerfile  action.yaml  entrypoint.sh
pre-commit-conventional-commit-message/: setup.cfg
pre-commit-conventional-commit-message/pre_commit_conventional_commit_message/: check_commit_message.py  checker.py
pre-commit-conventional-commit-message/tests/: test_check_commit_message.py
pre_commit_hooks/conventional_commits/: checker.py  cli.py
tests/: mkver.conf  test_check_commit_message.py  test_check_semantic_version.py  test_checker.py  test_cli.py  test_commit_message_checker.py  test_compile_release_notes.py
tests/test_package/: package.json  pyproject.toml  setup.py
