[metadata]
name = conventional_commits
version = 0.0.12
description = A pre-commit hook, semantic version checker, and release note compiler for facilitating continuous deployment via Conventional Commits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octue/conventional-commits
author = Octue
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    poetry
    requests>=2


[options.entry_points]
console_scripts =
    check-commit-message = conventional_commits.check_commit_message:main
    compile-release-notes = conventional_commits.compile_release_notes:main
    check-semantic-version = conventional_commits.check_semantic_version:main

[options.packages.find]
exclude =
    tests*
    docs*

[bdist_wheel]
universal = True

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build
ignore = F405, E501

[isort]
line_length=120
default_section = THIRDPARTY
known_third_party = requests,jsonschema,python-dotenv
known_first_party = twined,app,settings,test,examples
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = THIRDPARTY, LOCALFOLDER
lines_after_imports=2
# These are necessary for `isort` to create import statements that are
# compatible with `black`. Changing these will break our auto-formatting.
# See <https://black.readthedocs.io/en/stable/the_black_code_style.html>.
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
