[metadata]
name = pre_commit_conventional_commit_message
version = 0.0.1
description = Pre-commit hook to check that the commit message conforms with Conventional Commits (https://www.conventionalcommits.org/en/v1.0.0-beta.4/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octue/pre-commit-hooks
author = Octue
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-commit-message = conventional_commits.cli:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
